added tendency update, modified treatment and medical conditions, password encoder works, refactoring and restructuring packages TO DO a lot more